// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Component render ProgressBar component with 50% progress 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="active-progress"
      style="width: 50%; background-color: lightblue; transition: width 1s;"
    />
    <div
      class="label"
    >
      50%
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Component render ProgressBar component with default 0% progress 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="active-progress"
      style="width: 0%; background-color: lightblue; transition: width 1s;"
    />
    <div
      class="label"
    >
      0%
    </div>
  </div>
</DocumentFragment>
`;
